samples/demo/template.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-pol
spec:
  active: true
  name: httpbin-pol
  state: active
  access_rights_array:
    - name: httpbin
      namespace: default
      versions:
        - Default
  rate: 10
  per: 60
